15919
=== What steps will reproduce the problem (please be specific and use wikiformatting)? ===
```scala
scala> def bar(a: Int = 0, b: Int = 0)(cs: Any*) = ()
bar: (a: Int,b: Int)(cs: Any*)Unit

scala> bar(b = 1)(Nil: _*)
<console>:7: error: no `: _*' annotation allowed here
(such annotations are only allowed in arguments to *-parameters)
       bar(b = 1)(Nil: _*)
                     ^
```

=== What is the expected behavior? ===

Compiles okay

=== What do you see instead? ===

Invalid error

=== Additional information ===
These variations work okay:
```scala
scala> bar(a = 1)(Nil: _*)

scala> bar(b = 1)(1, 2)

scala> bar(a = 1, b = 1)(Nil: _*)

scala> def foo(a: Int = 0)(bs: Any*) = ()
foo: (a: Int)(bs: Any*)Unit

scala> foo()(Nil: _*)

scala> bar()(Nil: _*)
```

=== What versions of the following are you using? ===
  - Scala: 2.8.1
